kubernetes/authenticationservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticationservice-deployment
  labels:
    app: authenticationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticationservice
  template:
    metadata:
      labels:
        app: authenticationservice
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
      - name: acr-secret
      containers:
        - name: authenticationservice
          image: Containermicroservicio.azurecr.io/authenticationservice:vR 
          ports:
            - containerPort: 80
