kubernetes/cartservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-deployment
  labels:
    app: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
      - name: acr-secret
      containers:
        - name: cartservice
          image: Containermicroservicio.azurecr.io/cartservice:vR
          ports:
            - containerPort: 80
